--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en" dir="ltr">
 
 <head>
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='20'>
     <tr>
-      <td>  <img src="C:\Users\j.klevec\Desktop\java\HTML Personal Site\images\juls.png" alt="Julia's profile picture"></td>
+      <td>  <img src="images/juls.png" alt="Julia's profile picture"></td>
       <td>  <h1>Julia Klevets</h1>
         <p><em>The beginner of <strong>IT develope</strong></em></p>
         <p>
@@ -63,6 +63,7 @@
           <tr>
             <td>  <h3><a href="hobbies.html"> Hobbies</a></h3></td>
             <td>  <h3><a href="Contact.html">Contacts</a></h3></td>
+             
           </tr>
   </body>
 
