--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='20'>
     <tr>
-      <td>  <img src="images/juls.png" alt="Julia's profile picture"></td>
+      <td>  <img src="images\juls.png" alt="Julia's profile picture"></td>
       <td>  <h1>Julia Klevets</h1>
         <p><em>The beginner of <strong>IT develope</strong></em></p>
         <p>
