--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <table cellspacing='5'>
     <tr>
       <td>
-        Professionaly look at the monitor
+        Professionaly looking at the monitor
       </td>
       <td> &#9733;&#9733;&#9733;&#9733;&#9733;
       </td>
@@ -52,7 +52,7 @@
     </tr>
     <tr>
       <td>
-        Drink tea
+        Drinking tea
       </td>
       <td> &#9733;&#9733;&#9734;&#9734;&#9734;
       </td>
